--- a/model.ipynb
+++ b/model.ipynb
@@ -82,11 +82,7 @@
     "import pandas as pd\n",
     "\n",
     "from sentence_transformers import SentenceTransformer, util\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
